# DUTOnlineCourseSystem

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/backend/: .envexample  requirements.txt
src/backend/api_auth/: urls.py
src/backend/api_auth/permissions/: __init__.py  account_permission.py
src/backend/api_auth/serializers/: register.py
src/backend/api_auth/services/: __init__.py  account.py
src/backend/api_auth/views/: __init__.py  login.py  register.py  reset_password.py
src/backend/api_base/manager/: user_manager.py
src/backend/api_base/middleware/: __init__.py  url_middleware.py
src/backend/api_base/pagination/: __init__.py  custom_pagination.py
src/backend/api_base/permission/: __init__.py  permission.py
src/backend/api_base/views/: base.py
src/backend/api_course/: test.py  tests.py  urls.py
src/backend/api_notification/: urls.py
src/backend/api_process/: urls.py
src/backend/api_quiz/: urls.py
src/backend/api_report/: cron_tab.py  urls.py
src/backend/api_topic/: urls.py
src/backend/api_user/: test.py  urls.py
src/backend/core/: backends.py  config.env.sample  config.env.template  settings.py  urls.py
src/frontend/: .env.production  Dockerfile  env.ts  package-lock.json  package.json  sample.env  tsconfig.json
src/frontend/nginx/: nginx.conf
src/frontend/src/: App.vue  firebase.ts  main.ts
src/mobile/: app.json  package-lock.json
src/mobile/DUTOnlineCourseSystem/: .gitignore  App.js  app.json  babel.config.js  package-lock.json  package.json
(+394 files in other folders)
